17: added .tests project using Java 14 text blocks
Task-Url: https://github.com/LorenzoBettini/xtext-build-utils/issues/17